--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -13,6 +13,7 @@
     "react-modal-video": "^1.2.9",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "react-scrollspy": "^3.4.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
