--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -6,14 +6,26 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/user-event": "^14.2.1",
     "aos": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.33.1",
+    "react-map-gl": "^7.0.17",
+    "react-modal": "^3.15.1",
     "react-modal-video": "^1.2.9",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "react-scrollspy": "^3.4.3",
+    "react-slick": "^0.29.0",
+    "react-tabs": "^5.1.0",
+    "react-text-loop": "^2.3.0",
+    "react-transition-group": "^4.4.2",
+    "react-tsparticles": "^2.1.3",
+    "saas": "^1.0.0",
+    "sass": "^1.53.0",
+    "simple-react-lightbox": "^3.6.6",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
